<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bmi_will_be_displayed_here"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvBMICategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/category_will_be_displayed_here"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/ivBMICategoryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_representing_bmi_category" />

    <Button
        android:id="@+id/btnBackToMainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>
