<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/bmi_calculator"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/enter_weight_kg"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:hint="@string/enter_height_cm"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/calculate_my_bmi"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.6" />
</LinearLayout>
